2008-03-25  Werner Koch  <wk@g10code.com>

	* src/inst-gnupg.nsi: Write the language code for use by gettext
	into the Registry.

2008-03-25  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update libassuan.

2008-03-25  Werner Koch  <wk@g10code.com>

	* src/inst-dirmngr.nsi: Create empty extra-certs directory.
	* src/uninst-dirmngr.nsi: Delete it.

2008-03-25  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update w32pth.

2008-03-21  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update w32pth and libassuan.

	* packages/packages.current: Update gpa, libassuan, w32pth, gpa,
	kleopatra.

2008-03-20  Werner Koch  <wk@g10code.com>

	* src/potomo: New.
	* src/Makefile.am (gpg4win_pkg_gnupg_post_install): Remove mo file
	creation.
	(gpg4win_pkg_gnupgw_post_install): Convert po files.
	(EXTRA_DIST): Include potomo.
	* src/inst-gnupg2.nsi: Install all available mo files.
	* src/inst-gnupg2.nsi: Do not install com-certs.pem.

2008-03-19  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra and kdelibs.

	* src/make-msi.pl (lang_to_lcid): Support more languages.
	(gpg4win_nsis_stubs): Likewise.
	* make-msi.guids: Updated.

2008-03-18  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GpgOL.

2008-03-17  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra and kdelibs.

2008-03-12  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-atk.nsi: Install message catalogs for ar, es, fr and ru.
	* src/inst-glib.nsi: Likewise.
	* src/inst-gtk+.nsi: Likewise.  Also install gtk20-properties.mo.
	* src/uninst-atk.nsi: Uninstall them.
	* src/uninst-glib.nsi: Likewise.
	* src/uninst-gtk+.nsi: Likewise.

2008-03-11  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: Add gpg2 and its buddies to the light installer.
