@@ -1,3 +1,13 @@
+2008-03-26  Werner Koch  <wk@g10code.com>
+
+	* packages/packages.current: Update to GnuPG 2.0.9.
+	* Makefile.am (EXTRA_DIST): Remove gnupg-2.0.8 patches.
+
+	* src/inst-gnupg2.nsi: Install the help files.
+	* src/uninst-gnupg2.nsi: Remove them.
+	* src/inst-gnupg.nsi: Now delete the Lang Registry entry becuase
+	GnuPG 2.0.9 does not need it anymore.
+
 2008-03-25  Werner Koch  <wk@g10code.com>
 
 	* src/inst-gnupg.nsi: Write the language code for use by gettext
